template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: >
  Transcriber Infrastructure Layer
Metadata:
  AWS::ServerlessRepo::Application:
    Name: transcriber-infrastructure-layer
    Description: Transcriber Infrastructure Layer
    Author: jakep
    SemanticVersion: 0.1.0

Parameters:
  StageName:
    Type: String
    Default: nonprod
    AllowedValues:
      - nonprod
      - prod
      - dev
      - staging
      - local

Mappings:
  EnvMappings:
    nonprod:
      tagenv: nonprd
      env: nonprod
      REGION: us-west-2
    prod:
      tagenv: prd
      env: prod
      REGION: us-west-2
  AZRegions:
    ap-northeast-1:
      AZs: [ "a", "b" ]
    ap-northeast-2:
      AZs: [ "a", "b" ]
    ap-south-1:
      AZs: [ "a", "b" ]
    ap-southeast-1:
      AZs: [ "a", "b" ]
    ap-southeast-2:
      AZs: [ "a", "b" ]
    ca-central-1:
      AZs: [ "a", "b" ]
    eu-central-1:
      AZs: [ "a", "b" ]
    eu-west-1:
      AZs: [ "a", "b" ]
    eu-west-2:
      AZs: [ "a", "b" ]
    sa-east-1:
      AZs: [ "a", "b" ]
    us-east-1:
      AZs: [ "a", "b" ]
    us-east-2:
      AZs: [ "a", "b" ]
    us-west-1:
      AZs: [ "a", "b" ]
    us-west-2:
      AZs: [ "a", "b" ]

Resources:
  VPC:
    Type: AWS::EC2::VPC
    DeletionPolicy: Retain
    Properties:
      EnableDnsSupport: True
      EnableDnsHostnames: True
      CidrBlock: "10.0.0.0/16"
      Tags:
        - Key: Name
          Value: !Sub "Transcriber-VPC-${StageName}"

  VPCFlowLog:
    Type: AWS::EC2::FlowLog
    Properties:
      LogDestination: arn:aws:s3:::lll-aws-vpc-flow-logs
      LogDestinationType: s3
      LogFormat: ${account-id} ${action} ${az-id} ${bytes} ${dstaddr} ${dstport} ${end} ${flow-direction} ${instance-id} ${interface-id} ${log-status} ${packets} ${pkt-dst-aws-service} ${pkt-dstaddr} ${pkt-src-aws-service} ${pkt-srcaddr} ${protocol} ${region} ${srcaddr} ${srcport} ${start} ${sublocation-id} ${sublocation-type} ${subnet-id} ${tcp-flags} ${traffic-path} ${type} ${version} ${vpc-id}
      MaxAggregationInterval: 600
      ResourceId: !Ref VPC
      ResourceType: VPC
      TrafficType: ALL

  PublicSubnet0:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 0, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]
      CidrBlock: "10.0.0.0/24"
      MapPublicIpOnLaunch: True
      Tags:
        - Key: Name
          Value: "Transcriber-Public-Subnet-A"

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 1, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: True
      Tags:
        - Key: Name
          Value: "Transcriber-Public-Subnet-B"

  PrivateSubnet0:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 0, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]
      CidrBlock: "10.0.2.0/24"
      Tags:
        - Key: Name
          Value: "Transcriber-Private-Subnet-A"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 1, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]
      CidrBlock: "10.0.3.0/24"
      Tags:
        - Key: Name
          Value: "Transcriber-Private-Subnet-B"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DeletionPolicy: Retain
    Properties:
      Tags:
        - Key: "Name"
          Value: "Transcriber-InternetGateway"

  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value: "Transcriber-Public-Route-Table"

  PublicRoute:
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId:
        Ref: InternetGateway

  PublicSubnetRouteTableAssociation0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Retain
    Properties:
      SubnetId: !Ref PublicSubnet0
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DeletionPolicy: Retain
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value: "Transcriber-Network-ACL"

  InboundHTTPPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    DeletionPolicy: Retain
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"

  OutboundPublicNetworkAclEntry:
    Type: AWS::EC2::NetworkAclEntry
    DeletionPolicy: Retain
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"

  PublicSubnetNetworkAclAssociation0:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DeletionPolicy: Retain
    Properties:
      SubnetId: !Ref PublicSubnet0
      NetworkAclId: !Ref PublicNetworkAcl

  PublicSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DeletionPolicy: Retain
    Properties:
      SubnetId: !Ref PublicSubnet1
      NetworkAclId: !Ref PublicNetworkAcl

  ElasticIP0:
    Type: AWS::EC2::EIP
    DeletionPolicy: Retain
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: "Transcriber-ElasticIP-1"

  ElasticIP1:
    Type: AWS::EC2::EIP
    DeletionPolicy: Retain
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: "Transcriber-ElasticIP-2"

  NATGateway0:
    Type: AWS::EC2::NatGateway
    DeletionPolicy: Retain
    Properties:
      AllocationId: !GetAtt ElasticIP0.AllocationId
      SubnetId: !Ref PublicSubnet0
      Tags:
        - Key: Name
          Value: "Transcriber-NatGateway-1"

  #  NATGateway1:
  #    Type: AWS::EC2::NatGateway
  #    DeletionPolicy: Retain
  #    Properties:
  #      AllocationId: !GetAtt ElasticIP1.AllocationId
  #      SubnetId: !Ref PublicSubnet1
  #      Tags:
  #        - Key: Name
  #          Value: "Transcriber-NatGateway-2"

  PrivateRouteTable0:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "Transcriber-PrivateRouteTable-1"

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    DeletionPolicy: Retain
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "Transcriber-PrivateRouteTable-2"

  PrivateRouteToInternet0:
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      RouteTableId: !Ref PrivateRouteTable0
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGateway0

  PrivateRouteToInternet1:
    Type: AWS::EC2::Route
    DeletionPolicy: Retain
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGateway0

  PrivateSubnetRouteTableAssociation0:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: Retain
    Properties:
      SubnetId: !Ref PrivateSubnet0
      RouteTableId: !Ref PrivateRouteTable0

  PrivateSubnetRouteTableAssociation1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: Retain
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1


# RDS and Related Resources
  # RDSSecurityGroup:
  #   Type: AWS::EC2::SecurityGroup
  #   Properties:
  #     GroupDescription: "RDS Security Group"
  #     VpcId: !Ref VPC
  #     SecurityGroupIngress:
  #       - IpProtocol: Tcp
  #         FromPort: 5432
  #         ToPort: 5432
  #         CidrIp: 10.0.0.0/0

  # RDSSubnetGroup:
  #   Type: AWS::RDS::DBSubnetGroup
  #   Properties:
  #     DBSubnetGroupDescription: "RDS Subnet group"
  #     SubnetIds:
  #       - !Ref PrivateSubnet0
  #       - !Ref PrivateSubnet1

  # DatabaseCluster:
  #   Type: AWS::RDS::DBCluster
  #   Properties:
  #     DatabaseName: Tron
  #     MasterUsername: postgres
  #     MasterUserPassword: postgres
  #     Engine: aurora-postgresql
  #     Port: 5432
  #     DBSubnetGroupName: !Ref RDSSubnetGroup
  #     VpcSecurityGroupIds:
  #       - !GetAtt RDSSecurityGroup.GroupId

  # AuroraDBFirstInstance:
  #   Type: AWS::RDS::DBInstance
  #   Properties:
  #     Engine: aurora-postgresql
  #     DBClusterIdentifier: !Ref DatabaseCluster
  #     DBInstanceClass: db.t4g.medium
  #     DBSubnetGroupName: !Ref RDSSubnetGroup
  #     PubliclyAccessible: False
    
  # Dynamo Tables
  UserMetadataTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: "UserMetadata"
      TableClass: STANDARD
      DeletionProtectionEnabled: True
      AttributeDefinitions:
        -
          AttributeName: "user_id"
          AttributeType: S
      KeySchema:
        - 
          AttributeName: "user_id"
          KeyType: "HASH"
      BillingMode: PAY_PER_REQUEST

  DocumentTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: "Document"
      TableClass: STANDARD
      DeletionProtectionEnabled: True
      AttributeDefinitions:
        -
          AttributeName: "user_id"
          AttributeType: S
        -
          AttributeName: "document_id"
          AttributeType: S
      KeySchema:
        - 
          AttributeName: "user_id"
          KeyType: "HASH"
        - 
          AttributeName: "document_id"
          KeyType: "RANGE"
      BillingMode: PAY_PER_REQUEST
  
  TicketTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: "Ticket"
      TableClass: STANDARD
      DeletionProtectionEnabled: True
      AttributeDefinitions:
        -
          AttributeName: "document_id"
          AttributeType: S
        -
          AttributeName: "created_datetime"
          AttributeType: S
      KeySchema:
        - 
          AttributeName: "document_id"
          KeyType: "HASH"
        - 
          AttributeName: "created_datetime"
          KeyType: "RANGE"

      BillingMode: PAY_PER_REQUEST
  
  SubTicketTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: "SubTicket"
      TableClass: STANDARD
      DeletionProtectionEnabled: True
      AttributeDefinitions:
        -
          AttributeName: "sub_ticket_id"
          AttributeType: S
        -
          AttributeName: "user_id"
          AttributeType: S
      KeySchema:
        - 
          AttributeName: "user_id"
          KeyType: "HASH"
        - 
          AttributeName: "sub_ticket_id"
          KeyType: "RANGE"

      BillingMode: PAY_PER_REQUEST
  
  TransactionTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: "Transaction"
      TableClass: STANDARD
      DeletionProtectionEnabled: True
      AttributeDefinitions:
        -
          AttributeName: "transaction_id"
          AttributeType: S
        -
          AttributeName: "user_id"
          AttributeType: S
      KeySchema:
        - 
          AttributeName: "user_id"
          KeyType: "HASH"
        - 
          AttributeName: "transaction_id"
          KeyType: "RANGE"

      BillingMode: PAY_PER_REQUEST

  # IAM Role for DynamoDB
  DynamoDatabasesAccessIAMRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: DynamoDatabasesAccessRole
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Policies:
        - PolicyName: UserMetadataTablePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "dynamodb:BatchGetItem"
                  - "dynamodb:GetItem"
                  - "dynamodb:PutItem"
                  - "dynamodb:UpdateItem"
                  - "dynamodb:DeleteItem"
                  - "dynamodb:DescribeTable"
                  - "dynamodb:Query"
                Resource: !GetAtt UserMetadataTable.Arn
        - PolicyName: DocumentsTablePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "dynamodb:BatchGetItem"
                  - "dynamodb:GetItem"
                  - "dynamodb:PutItem"
                  - "dynamodb:UpdateItem"
                  - "dynamodb:DeleteItem"
                  - "dynamodb:DescribeTable"
                  - "dynamodb:Query"
                Resource: !GetAtt DocumentTable.Arn
        - PolicyName: TicketTablePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "dynamodb:BatchGetItem"
                  - "dynamodb:GetItem"
                  - "dynamodb:PutItem"
                  - "dynamodb:UpdateItem"
                  - "dynamodb:DeleteItem"
                  - "dynamodb:DescribeTable"
                  - "dynamodb:Query"
                Resource: !GetAtt TicketTable.Arn
        - PolicyName: SubTicketTablePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "dynamodb:BatchGetItem"
                  - "dynamodb:GetItem"
                  - "dynamodb:PutItem"
                  - "dynamodb:UpdateItem"
                  - "dynamodb:DeleteItem"
                  - "dynamodb:DescribeTable"
                  - "dynamodb:Query"
                Resource: !GetAtt SubTicketTable.Arn
        - PolicyName: TransactionTablePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "dynamodb:BatchGetItem"
                  - "dynamodb:GetItem"
                  - "dynamodb:PutItem"
                  - "dynamodb:UpdateItem"
                  - "dynamodb:DeleteItem"
                  - "dynamodb:DescribeTable"
                  - "dynamodb:Query"
                Resource: !GetAtt TransactionTable.Arn
        - PolicyName: LambdaExecutionPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "ec2:DescribeNetworkInterfaces"
                  - "ec2:CreateNetworkInterface"
                  - "ec2:DeleteNetworkInterface"
                  - "ec2:DescribeInstances"
                  - "ec2:AttachNetworkInterface"
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                  - "sns:Publish"
                  - "lambda:InvokeFunction"
                  - "states:StartExecution"
                  - "s3:*"
                Resource: "*"
        - PolicyName: KmsPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "kms:*"
                  - "secretsmanager:*"
                Resource: "*"

  # Queue
  # DeadLetterQueue:
  #   Type: AWS::SQS::Queue
  #   Properties:
  #     QueueName: !Sub ${StageName}-DeadLetterQueue

  # OrderQueue:
  #   Type: AWS::SQS::Queue
  #   Properties:
  #     QueueName: !Sub ${StageName}-OrderQueue
  #     ContentBasedDeduplication: true
  #     DeduplicationScope: messageGroup
  #     VisibilityTimeout: 35
  #     RedrivePolicy:
  #       deadLetterTargetArn: !GetAtt DeadLetterQueue.Arn
  #       maxReceiveCount: 5

  # Caching layer
  # ElasticacheSubnetGroup:
  #   Type: AWS::ElastiCache::SubnetGroup
  #   Properties:
  #     Description: "Elasticache Subnet Group"
  #     SubnetIds:
  #       - !Ref PrivateSubnet0
  #       - !Ref PrivateSubnet1
  # ElasticacheSecurityGroup:
  #   Type: 'AWS::EC2::SecurityGroup'
  #   Properties:
  #     GroupDescription: Elasticache Security Group
  #     VpcId: !Ref VPC
  #     SecurityGroupIngress:
  #       - IpProtocol: tcp
  #         FromPort: 6379
  #         ToPort: 6379
  #         CidrIp: 10.0.0.0/0
  # ElasticacheCluster:
  #   Type: 'AWS::ElastiCache::CacheCluster'
  #   Properties:    
  #     Engine: redis
  #     CacheNodeType: cache.t2.micro
  #     CacheSubnetGroupName: !Ref ElasticacheSubnetGroup
  #     NumCacheNodes: 1
  #     Port: 6379
  #     VpcSecurityGroupIds:
  #       - !GetAtt 
  #         - ElasticacheSecurityGroup
  #         - GroupId

# WAF/Web ACL
  # StudioWAF:
  #   Type: AWS::WAFv2::WebACL
  #   Properties:
  #     DefaultAction:
  #       Allow: {}
  #     Name: !Sub "${StageName}-Studio-WAF"
  #     Scope: REGIONAL
  #     VisibilityConfig:
  #       CloudWatchMetricsEnabled: true
  #       MetricName: "studio"
  #       SampledRequestsEnabled: true
  #     Rules:
  #       - Name: AWSCommonManagedRules
  #         Priority: 0
  #         OverrideAction:
  #           Count: {}
  #         VisibilityConfig:
  #           CloudWatchMetricsEnabled: true
  #           MetricName: CommonAWSRulesMetric
  #           SampledRequestsEnabled: true
  #         Statement:
  #           ManagedRuleGroupStatement:
  #             Name: AWSManagedRulesCommonRuleSet
  #             VendorName: AWS
  #             ExcludedRules: []

# Route53 hosted zone
  ApiHostedZone:
    Type: "AWS::CertificateManager::Certificate"
    Properties: 
      DomainName: !Sub "${StageName}-api.smartool.ai"
      ValidationMethod: DNS

  Hosted:
    Type: "AWS::Route53::HostedZone"
    Properties:
      HostedZoneConfig:
        Comment: 'Hosted Zone'
      Name: !Sub "${StageName}-api.smartool.ai"
  
  # DevUICertificate:
  #   Type: "AWS::CertificateManager::Certificate"
  #   Properties: 
  #     DomainName: !Sub "${StageName}-app.smartool.ai"
  #     ValidationMethod: DNS

  # DevUiHosted:
  #   Type: "AWS::Route53::HostedZone"
  #   Properties:
  #     HostedZoneConfig:
  #       Comment: 'Hosted Zone'
  #     Name: !Sub "${StageName}-app.smartool.ai"

# cert
  # ApiCertificate: 
  #   Type: "AWS::CertificateManager::Certificate"
  #   Properties: 
  #     DomainName: !Sub "${StageName}-api.smartool.ai"
  #     ValidationMethod: DNS
